--- a/bkd.html
+++ b/bkd.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width,initial-scale=1,viewport-fit=cover">
-<title>プレス稼働ログ（ヒーロー表示＋停止内訳バー）</title>
+<title>プレス稼働ログ（ヒーロー表示＋停止内訳バー＋現場モード修正）</title>
 <style>
   :root{
     --ink:#0f172a; --muted:#6b7280; --card:#fff; --bg:#f6f8fb; --border:#e5e7eb;
@@ -39,16 +39,12 @@
     font-size:clamp(36px,8.5vw,80px); line-height:1; color:#0b141f;
     text-shadow:0 1px 0 rgba(255,255,255,.6);
   }
-  .under{
-    display:flex;flex-wrap:wrap;gap:14px;color:#22303c;opacity:.85;font-size:clamp(13px,1.8vw,15px)
-  }
+  .under{display:flex;flex-wrap:wrap;gap:14px;color:#22303c;opacity:.85;font-size:clamp(13px,1.8vw,15px)}
   .pill{
     background:rgba(255,255,255,.9); padding:6px 10px; border-radius:999px; border:1px solid var(--border);
     display:inline-flex; gap:6px; align-items:center
   }
-  .bigStat{
-    display:flex;flex-direction:column; align-items:flex-end; gap:6px
-  }
+  .bigStat{display:flex;flex-direction:column; align-items:flex-end; gap:6px}
   .bigStat .val{font-variant-numeric:tabular-nums;font-weight:800;font-size:clamp(18px,3.2vw,28px)}
   .bigStat .cap{color:#345}
   .heroTools{position:absolute;right:10px;top:10px;display:flex;gap:8px}
@@ -341,10 +337,29 @@ excludePlanEl.addEventListener('change',renderAll);
 machineEl.addEventListener('change',e=>{state.machine=e.target.value;state.data=load(state.machine,state.date);renderAll();});
 dateEl.addEventListener('change',e=>{state.date=e.target.value;state.data=load(state.machine,state.date);renderAll();});
 document.getElementById('newDay').addEventListener('click',()=>{const d=prompt('日付（YYYY-MM-DD）',state.date);if(d){dateEl.value=d;state.date=d;state.data=load(state.machine,d);renderAll();}});
-document.getElementById('toggleFloor').addEventListener('click',()=>{
-  document.body.classList.toggle('floorOnly');
-  if(document.fullscreenElement){ document.exitFullscreen(); }
-  else { document.documentElement.requestFullscreen?.(); }
+
+/* ===== 現場モード ON/OFF（確実に戻れる版） ===== */
+const floorBtn = document.getElementById('toggleFloor');
+floorBtn.addEventListener('click', async ()=>{
+  const isActive = document.body.classList.contains('floorOnly');
+  if (isActive) {
+    // 現場モード解除
+    document.body.classList.remove('floorOnly');
+    floorBtn.textContent = '現場モード';
+    if (document.fullscreenElement) await document.exitFullscreen();
+  } else {
+    // 現場モードON
+    document.body.classList.add('floorOnly');
+    floorBtn.textContent = '戻る';
+    await document.documentElement.requestFullscreen?.();
+  }
+});
+// Escなどでフルスクリーンが解除された時も必ず復帰
+document.addEventListener('fullscreenchange', ()=>{
+  if (!document.fullscreenElement) {
+    document.body.classList.remove('floorOnly');
+    floorBtn.textContent = '現場モード';
+  }
 });
 
 /* ===== 時計＆タイマー ===== */
