dateview.html を更新

--- a/dateview.html
+++ b/dateview.html
@@ -88,8 +88,13 @@
     position: relative; overflow: hidden;
   }
   .dept-btn:hover { border-color: #667eea; background: #f8f9ff; }
-  .dept-btn.active { border-color: #667eea; background: #667eea; color: #fff; }
-
+  /* 既存の .dept-btn.active を置き換え */
+.dept-btn.active {
+  background: #fff;                 /* ← 白のまま */
+  color: #1d1d1f;                   /* 文字も通常色に戻す */
+  border-color: #667eea;            /* 枠だけ強調 */
+  box-shadow: inset 0 0 0 2px #667eea, 0 2px 6px rgba(0,0,0,.06);
+}
   .dept-count { font-size: .85rem; opacity: .8; margin-top: 4px; }
 
   /* ▼ スパークラインを中央重ね配置（文字より下に描画） */
