--- a/dateview.html
+++ b/dateview.html
@@ -88,30 +88,25 @@
     position: relative; overflow: hidden;
   }
   .dept-btn:hover { border-color: #667eea; background: #f8f9ff; }
-  /* 既存の .dept-btn.active を置き換え */
-.dept-btn.active {
-  background: #fff;                 /* ← 白のまま */
-  color: #1d1d1f;                   /* 文字も通常色に戻す */
-  border-color: #667eea;            /* 枠だけ強調 */
-  box-shadow: inset 0 0 0 2px #667eea, 0 2px 6px rgba(0,0,0,.06);
-}
+  .dept-btn.active { border-color: #667eea; background: #667eea; color: #fff; }
+
   .dept-count { font-size: .85rem; opacity: .8; margin-top: 4px; }
 
-  /* ▼ スパークラインを中央重ね配置（文字より下に描画） */
+  /* スパークライン：中央重ね＋少し大きめ */
   .dept-btn .sparkline {
     position: absolute;
     top: 50%;
     left: 6px;
     right: 6px;
     transform: translateY(-50%);
-    height: 44px;        /* 大きめ */
-    opacity: 0.5;        /* やや濃く */
+    height: 44px;
+    opacity: 0.5;
     pointer-events: none;
-    z-index: 0;          /* 文字の下 */
+    z-index: 0;         /* 文字の下に */
   }
-  .dept-btn > div {      /* テキストは前面に */
+  .dept-btn > div {
     position: relative;
-    z-index: 1;
+    z-index: 1;         /* 文字は前面に */
   }
 
   /* データシートエリア */
@@ -163,10 +158,9 @@
   .photo-btn:hover { background: #1976d2; }
   .photo-btn:disabled { background: #ccc; cursor: not-allowed; }
 
-  /* 詳細モーダル */
+  /* モーダル */
   .modal { display: none; position: fixed; inset: 0; background: rgba(0,0,0,.5); z-index: 1000; align-items: center; justify-content: center; }
   .modal.active { display: flex; }
-
   .modal-content {
     background: #fff; border-radius: 16px; max-width: 900px; width: 95%; max-height: 90vh; overflow-y: auto;
     box-shadow: 0 20px 60px rgba(0,0,0,.3);
@@ -178,11 +172,10 @@
   .modal-title { font-size: 1.3rem; font-weight: 600; color: #667eea; }
   .btn-close { background: #f0f0f0; border: none; width: 32px; height: 32px; border-radius: 50%; cursor: pointer; font-size: 1.2rem; color: #666; transition: .2s; }
   .btn-close:hover { background: #e0e0e0; }
-
   .modal-body { padding: 24px; }
+
   .detail-section { margin-bottom: 24px; }
   .section-title { font-size: 1rem; font-weight: 600; color: #667eea; margin-bottom: 12px; padding-bottom: 8px; border-bottom: 2px solid #e0e0e0; }
-
   .detail-grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); gap: 16px; }
   .detail-item { display: flex; flex-direction: column; gap: 4px; }
   .detail-label { font-size: .85rem; color: #888; font-weight: 500; }
@@ -320,7 +313,7 @@
     authDomain: "abnreport-fd733.firebaseapp.com",
     databaseURL: "https://abnreport-fd733-default-rtdb.asia-southeast1.firebasedatabase.app",
     projectId: "abnreport-fd733",
-    storageBucket: "abnreport-fd733.firebasestorage.app",  // ← ご指定どおり
+    storageBucket: "abnreport-fd733.firebasestorage.app",  // ご指定どおり
     messagingSenderId: "349748947315",
     appId: "1:349748947315:web:010cb671d2a95bcf1f7d06"
   };
@@ -334,13 +327,13 @@
   let filteredData = [];
   let selectedDepts = new Set();
 
-  // 入力欄は文字列(YYYY-MM-DD)のまま。比較は数値(UTCミリ秒)
+  // 期間指定は文字列で保持、判定はUTCミリ秒へ
   let dateFromStr = null;
   let dateToStr   = null;
 
   let currentSort = { column: null, direction: 'asc' };
 
-  // ========= 共通ユーティリティ =========
+  // ========= ユーティリティ =========
   function formatDate(date) {
     const y = date.getFullYear();
     const m = String(date.getMonth() + 1).padStart(2, '0');
@@ -358,7 +351,7 @@
       .toUpperCase();
   }
 
-  // 日付のゆれを吸収
+  // 日付のゆれを吸収（FireStore Timestamp/Date/数値/文字列 各種）
   function parseDateFlexible(v) {
     if (!v) return { iso: null, value: null };
     let d = null;
@@ -372,13 +365,16 @@
 
     if (!d && typeof v === 'string') {
       const s = v.trim();
+      // 例: 2025/11/09, 2025-11-09, 2025.11.09, 2025年11月9日
       let m = s.match(/^(\d{4})[.\-\/年](\d{1,2})[.\-\/月](\d{1,2})(?:日)?$/);
       if (m) d = new Date(Date.UTC(+m[1], +m[2]-1, +m[3]));
       if (!d) {
+        // 例: 25/11/09 → 2025/11/09 扱い
         m = s.match(/^(\d{2})[.\-\/年](\d{1,2})[.\-\/月](\d{1,2})(?:日)?$/);
         if (m) d = new Date(Date.UTC(2000 + (+m[1]), +m[2]-1, +m[3]));
       }
       if (!d) {
+        // 例: 20251109
         m = s.match(/^(\d{4})(\d{2})(\d{2})$/);
         if (m) d = new Date(Date.UTC(+m[1], +m[2]-1, +m[3]));
       }
@@ -444,8 +440,8 @@
   function buildDeptSparkSeries(data, daysUTC) {
     const perDept = new Map();
     const dayIndex = new Map();
-    daysUTC.forEach((ms, idx) => dayIndex.set(ms, idx));
     const ONE_DAY = 86400000;
+    daysUTC.forEach((ms, idx) => dayIndex.set(ms, idx));
 
     for (const it of data) {
       const dept = it.departmentNormalized || '未設定';
@@ -463,8 +459,9 @@
       const align = occ - (occ % ONE_DAY);
       let idx = dayIndex.get(align);
       if (idx == null) {
+        // ±半日まで許容
         for (let i = 0; i < daysUTC.length; i++) {
-          if (Math.abs(daysUTC[i] - align) <= 43200000) { idx = i; break; } // ±12h
+          if (Math.abs(daysUTC[i] - align) <= 43200000) { idx = i; break; }
         }
         if (idx == null) continue;
       }
@@ -474,18 +471,19 @@
     return perDept;
   }
 
-  function drawSparkline(canvas, values) {
+  // ▼ B案対応：色指定できる描画
+  function drawSparkline(canvas, values, color='rgba(66,133,244,0.65)', pointColor=color) {
     if (!canvas) return;
     const dpr = window.devicePixelRatio || 1;
     const cssW = canvas.clientWidth || 100;
-    const cssH = canvas.clientHeight || 44; // 大きめ
+    const cssH = canvas.clientHeight || 44;
     canvas.width  = Math.max(1, Math.floor(cssW * dpr));
     canvas.height = Math.max(1, Math.floor(cssH * dpr));
     const ctx = canvas.getContext('2d');
     if (!ctx) return;
     ctx.clearRect(0,0,canvas.width,canvas.height);
 
-    ctx.lineWidth = 2 * dpr;  // 太くして視認性UP
+    ctx.lineWidth = 2 * dpr;
 
     const n = values.length;
     if (!n) return;
@@ -493,12 +491,12 @@
     const pad = 3 * dpr;
     const xStep = n > 1 ? (canvas.width - pad*2) / (n-1) : 0;
 
-    // ベースライン
-    ctx.strokeStyle = 'rgba(0,0,0,0.1)';
+    // ベースライン（薄く）
+    ctx.strokeStyle = 'rgba(0,0,0,0.12)';
     ctx.beginPath(); ctx.moveTo(pad, canvas.height - pad); ctx.lineTo(canvas.width - pad, canvas.height - pad); ctx.stroke();
 
-    // 線
-    ctx.strokeStyle = 'rgba(66,133,244,0.6)';
+    // 折れ線
+    ctx.strokeStyle = color;
     ctx.beginPath();
     for (let i = 0; i < n; i++) {
       const v = values[i];
@@ -510,7 +508,7 @@
     ctx.stroke();
 
     // 終端点
-    ctx.fillStyle = 'rgba(66,133,244,0.6)';
+    ctx.fillStyle = pointColor;
     const lastX = pad + xStep * (n - 1);
     const lastV = values[n - 1];
     const lastR = (max === min) ? 0.5 : (lastV - min) / (max - min);
@@ -611,10 +609,10 @@
     applyFilters();
   }
 
-  // 部署ボタン描画（スパークライン付き）
+  // 部署ボタン描画（B案：選択中は白線で再描画）
   function renderDepartmentButtons() {
     const daysUTC = buildLastNDaysUTC(7);
-    const seriesMap = buildDeptSparkSeries(allData, daysUTC); // フィルタ連動にしたいなら filteredData を使う
+    const seriesMap = buildDeptSparkSeries(allData, daysUTC); // フィルタ連動にしたい場合は filteredData に置換
 
     const deptCounts = {};
     allData.forEach(item => {
@@ -628,8 +626,9 @@
 
     container.innerHTML = sortedDepts.map(dept => {
       const cnt = deptCounts[dept];
+      const activeClass = selectedDepts.has(dept) ? 'active' : '';
       return `
-        <div class="dept-btn" data-dept="${dept}">
+        <div class="dept-btn ${activeClass}" data-dept="${dept}">
           <canvas class="sparkline"></canvas>
           <div>${dept}</div>
           <div class="dept-count">${cnt}件</div>
@@ -637,22 +636,42 @@
       `;
     }).join('');
 
+    // クリックで選択切替＋再描画
     container.querySelectorAll('.dept-btn').forEach(btn => {
       btn.addEventListener('click', () => {
         const dept = btn.getAttribute('data-dept');
         if (selectedDepts.has(dept)) { selectedDepts.delete(dept); btn.classList.remove('active'); }
         else { selectedDepts.add(dept); btn.classList.add('active'); }
+
         applyFilters();
+
+        // 直後に全ボタン再描画（色を更新）
+        requestAnimationFrame(() => {
+          container.querySelectorAll('.dept-btn').forEach(b => {
+            const d = b.getAttribute('data-dept');
+            const c = b.querySelector('.sparkline');
+            const vals = seriesMap.get(d) || Array(7).fill(0);
+            const active = b.classList.contains('active');
+            drawSparkline(c, vals,
+              active ? 'rgba(255,255,255,0.95)' : 'rgba(66,133,244,0.65)',
+              active ? 'rgba(255,255,255,0.95)' : 'rgba(66,133,244,0.65)'
+            );
+          });
+        });
       });
     });
 
-    // 描画
+    // 初回描画
     requestAnimationFrame(() => {
       container.querySelectorAll('.dept-btn').forEach(btn => {
         const dept = btn.getAttribute('data-dept');
         const canvas = btn.querySelector('.sparkline');
         const values = seriesMap.get(dept) || Array(7).fill(0);
-        drawSparkline(canvas, values);
+        const isActive = btn.classList.contains('active');
+        drawSparkline(canvas, values,
+          isActive ? 'rgba(255,255,255,0.95)' : 'rgba(66,133,244,0.65)',
+          isActive ? 'rgba(255,255,255,0.95)' : 'rgba(66,133,244,0.65)'
+        );
       });
     });
 
@@ -665,7 +684,11 @@
           const dept = btn.getAttribute('data-dept');
           const canvas = btn.querySelector('.sparkline');
           const values = seriesMap.get(dept) || Array(7).fill(0);
-          drawSparkline(canvas, values);
+          const isActive = btn.classList.contains('active');
+          drawSparkline(canvas, values,
+            isActive ? 'rgba(255,255,255,0.95)' : 'rgba(66,133,244,0.65)',
+            isActive ? 'rgba(255,255,255,0.95)' : 'rgba(66,133,244,0.65)'
+          );
         });
       }, 150);
     }, { passive: true });
@@ -945,6 +968,8 @@
     selectedDepts.clear();
     document.querySelectorAll('.dept-btn').forEach(btn => btn.classList.remove('active'));
     applyFilters();
+    // 選択解除後もスパークライン色を戻すため再描画
+    renderDepartmentButtons();
   });
 
   document.getElementById('btnYesterday').addEventListener('click', () => {
@@ -999,6 +1024,7 @@
     document.getElementById('btnYesterday').classList.remove('active');
     document.getElementById('btnToday').classList.remove('active');
     applyFilters();
+    renderDepartmentButtons();
   });
 
   document.getElementById('btnResetSort').addEventListener('click', () => {
